# dc2-forecasting-global-ocean-dynamics

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile.debug  devcontainer.json  docker-compose.yml  environment.yml
.github/workflows/: docs.yml
dc2/: __init__.py  evaluate.py  submit.py
dc2/config/: dc2.yaml  dc2_edito.yaml  dc2_wasabi.yaml  leaderboard_config.yaml  leaderboard_texts.yaml
dc2/evaluation/: __init__.py  dc2.py  evaluation.py
dc2/leaderboard_results/: results_glonet.json
docker/: Dockerfile  README.md
docs/: requirements.txt
docs/scripts/: optimize_map_data.py  pack_map_data.py
docs/source/: conf.py  index.md
docs/source/_extra/leaderboard/: about.html  leaderboard.html  maps.html
docs/source/_extra/leaderboard/map_data/: glonet_argo_profiles_200m_salinity_rmsd_0.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-01-03.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-01-10.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-01-17.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-01-24.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-01-31.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-02-07.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-02-14.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-02-21.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-02-28.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-03-06.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-03-13.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-03-20.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-03-27.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-04-03.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-04-10.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-04-17.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-04-24.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-05-01.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-05-08.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-05-15.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-05-22.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-05-29.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-06-05.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-06-12.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-06-19.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-06-26.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-07-03.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-07-10.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-07-17.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-07-24.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-07-31.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-08-07.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-08-14.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-08-21.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-08-28.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-09-04.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-09-11.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-09-18.js  glonet_argo_profiles_200m_salinity_rmsd_0_2024-09-25.js  (+10916 more)
docs/source/content/: api.rst  data.md  dctools_api.rst  evaluation.md  metrics.md  notebooks.md  quickstart.md  references.md  submission.md  submissions.md  task.md
docs/source/content/_generated/: dc2.config.rst  dc2.evaluate.rst  dc2.evaluation.dc2.DC2Evaluation.rst  dc2.evaluation.dc2.rst  dc2.evaluation.rst  dc2.rst  dc2.submit.main.rst  dc2.submit.rst
docs/source/notebooks/: evaluation_quickstart.ipynb  submit.ipynb
notebooks/: evaluation_quickstart.ipynb  submit.ipynb  test.ipynb
scripts/: create_sample_submission.py  repro_hang.py  repro_hang_dask.py
